--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,26 @@
 .bck-green{
   background-color: #1bbc9b;
 }
+.text-white{
+  color: #fff;
+}
 .title{
   text-align: center;
   text-transform: uppercase;
   font-weight: bold;
   padding-top: 15px;
 }
+/* BUTTON */
 .button-container{
   text-align: center;
   margin-bottom: 30px;
 }
+.btn-green{
+  border: 2px solid #fff;
+  background-color: #1bbc9b;
+  color: #fff;
+}
+/* FINE BUTTON */
 /* STELLA */
 .star-container{
   text-align: center;
@@ -26,7 +36,7 @@
 .star-container::after{
   content: "";
   display: inline-block;
-  width: 100px;
+  width: 20%;
   height: 4px;
   border-radius: 2px;
   vertical-align: middle;
@@ -48,15 +58,25 @@
 /* FINE STELLA */
 /* COMMON */
 
-#navbar{
-  height: 180px;
-  background-color: #425B76;
-}
-
-/* JUMBOTRON */
-#jumbotron .title{
+/* NAVBAR */
+.bl-navbar {
+  background-color: #2c3e50;
   color: #fff;
 }
+.bl-navbar .navbar-brand, .bl-navbar .navbar-nav>li>a {
+  color: #fff;
+  font-weight: bolder;
+}
+.bl-navbar .navbar-brand {
+  font-size:24px;
+}
+.bl-navbar .navbar-brand:hover, .bl-navbar .navbar-nav>li>a:hover {
+  color: #1ABC9C;
+}
+/* FINE NAVBAR */
+
+/* JUMBOTRON */
+
 /* FINE JUMBOTRON */
 
 /* PORTFOLIO */
@@ -70,15 +90,33 @@
 #about{
   margin-top: 40px;
 }
-#about h2{
-  color: #fff;
-}
 #about p{
-  color: #fff;
   padding: 40px 20%;
   font-size: 22px;
 }
 /* FINE ABOUT */
 
 /* CONTACT */
+#contact .row{
+  margin-top: 40px;
+}
+.bl-form ::placeholder, .bl-form input, .bl-form textarea{
+  color: #2c3e50;
+  font-size: 19px;
+  /* line-height: 2.5; */
+}
+.bl-form .form-group{
+  border-bottom: 1px solid #ccc;
+  padding: 10px 0;
+}
+.bl-form input, .bl-form textarea{
+  border: 0;
+  border-radius: 0;
+  /* border-bottom: 1px solid #ccc; */
+  box-shadow: none;
+  padding-left: 0;
+}
+#contact .button-container{
+  text-align: left;
+}
 /* FINE CONTACT */
